--- a/less/slideinmenu.less
+++ b/less/slideinmenu.less
@@ -52,6 +52,7 @@
 	ul {
 		margin: 0;
 		padding: 1rem 0 0 0;
+		list-style: none;
 
 		& + ul {
 			margin-top: .5rem;
